munin (2.0.42-6) UNRELEASED; urgency=medium

  * Fix test for MIME type of generated graphs (ignored before).

 -- Lars Kruse <devel@sumpfralle.de>  Sun, 11 Nov 2018 16:01:17 +0100

munin (2.0.42-5) unstable; urgency=medium

  [ Lars Kruse ]
  * Re-arrange tests for improved readability of test output
  * Tests: Properly detect the assumed presence of the conntrack-related munin
    plugins. Previously only the conntrack executable was checked - now the
    alternative procfs files are evaluated, too. (Really closes: #910684)

 -- Holger Levsen <holger@debian.org>  Sun, 11 Nov 2018 13:48:17 +0100

munin (2.0.42-4) unstable; urgency=medium

  [ Lars Kruse ]
  * tests for munin-node plugins: add conntrack-related plugins to the list of
    expected plugins, if conntrack is available in the test environment.
    This fixes the current autopktest failure. (Closes: #910684)

 -- Holger Levsen <holger@debian.org>  Sat, 10 Nov 2018 14:38:42 +0100

munin (2.0.42-3) unstable; urgency=medium

  [ Lars Kruse ]
  * munin-async.postinst: fix handling of a missing "munin-async" group
    (do not try to create the user again, but add it to the group instead)
  * tests: do not rely on /var/cache/munin/www/localdomain to be created in
    CGI mode
  * add more build dependencies for upstream tests (test failures are
    currently tolerated by upstream)
  * d/tests/munin-node: increase verbosity of output in case of failure
    for the test of available plugins
  * d/tests/control: remove dependency on net-tools (introduced in 2.0.42-2)
    as it did not fix the test failure
  * Remove the empty directory /var/lib/munin-async from "munin" and add it to
    "munin-node". This directory is required by "munin-sched" (shipped in
    "munin-node").
  * munin and munin-node: remove the empty directory /var/run.
    This directory was moved to /run, thus we should not create it
    explicitly anymore.
  * fix spelling of test filename munin-master/01.master-components.t
