@@ -14,7 +14,7 @@ fi
 
 get_munin_url() {
     # "--no-buffer" prevents curl errors ("(23) Failed writing body") in case of incomplete consumption (e.g. "grep -q")
-    curl --silent --fail --no-buffer "http://localhost/munin/$1"
+    curl --silent --fail --no-buffer "http://localhost/munin/${1#/}"
 }
 
 
@@ -27,6 +27,13 @@ assert_mime_type() {
     echo "$1" >expected_mime_type
     file --mime-type --brief - >received_mime_type
     test_cmp expected_mime_type received_mime_type
+}
+
+
+assert_http_response_content() {
+    local url="$1"
+    local expected_content="$2"
+    get_munin_url "$url" | grep -qF "$expected_content"
 }
 
 
@@ -56,15 +63,15 @@ test_expect_success "main site: mime type" '
 '
 
 test_expect_success "main site: dynamically generated" '
-  get_munin_url "/" | grep -q "Auto-generated by Munin"
+  assert_http_response_content "/" "Auto-generated by Munin"
 '
 
 test_expect_success "main site: contains node" '
-  get_munin_url "/" | grep -q "localhost.localdomain/index.html"
+  assert_http_response_content "/" "localhost.localdomain/index.html"
 '
 
 test_expect_success "assets: CSS" '
-  get_munin_url "/static/style-new.css" | grep -q "margin-top"
+  assert_http_response_content "/static/style-new.css" "margin-top"
 '
 
 test_expect_success "node: html" '
