@@ -36,18 +36,8 @@ test_expect_success "status (after start)" '
   service munin-node status
 '
 
-check_port() {
-    while ! nc -z localhost 4949; do
-        a=$(expr $a + 1)
-        if [ $a = 10 ]; then
-            return 1
-        fi
-        sleep 1;
-    done
-}
-
 test_expect_success "munin node port listening" '
-  check_port
+  echo quit | nc localhost 4949
 '
 
 test_done
