@@ -1,6 +1,7 @@
 munin (2.0.42-6) UNRELEASED; urgency=medium
 
   * Fix test for MIME type of generated graphs (ignored before).
+  * Merge test code details from debian-experimental.
 
  -- Lars Kruse <devel@sumpfralle.de>  Sun, 11 Nov 2018 16:01:17 +0100
 
